--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carlos Sousa Webpage</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <title>Collision Detection Demo</title>
+    <link rel="stylesheet" href="styles.css">
+    <script type="module" src="main.js"></script>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1 class="title">Collision detection with SAT and MVP</h1>
+    <div id="container">
+        <div id="coordinates" class="info">
+            <div id="x-coord"></div>
+            <div id="y-coord"></div>
+        </div>
+        <div id="messages">
+            <div id="shape-collisions" class="info">
+                <h1>COLLISION LISTS</h1>
+            </div>
+        </div>
+        <button id="reset">RESET</button>
+        <canvas id="canvas"></div>
 </body>
 </html>
